Add detailed description and favicon

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,7 +2,11 @@
 import Layout from '@/layouts/Layout.astro';
 import HeroSection from '@/components/HeroSection.astro';
 ---
-<Layout title='ADaPT – Assemble Drive and Perform Technology'>
+
+<Layout
+  title='ADaPT – Assemble Drive and Perform Technology'
+  description='Xin chào tất cả mọi người, chúng mình đến từ câu lạc bộ công nghệ thông tin đầu tiên và duy nhất tại CSP - ADaPT! THE ONLY LIMIT IS YOUR IMAGINATION. ADaPT là câu lạc bộ công nghệ thông tin đầu tiên và duy nhất tại Chuyên Sư Phạm. Nhận thấy tầm…'
+>
   <HeroSection>
     <h1 class="text-7xl text-zinc-50">ADaPT</h1>
     <p class='text-2xl max-w-3xl text-zinc-200 text-center'>
