Move styles to layout

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -24,3 +24,13 @@ const { title, description } = Astro.props;
 		<slot />
 	</body>
 </html>
+
+<style>
+  h1 {
+    @apply font-bold font-headings;
+  }
+
+  p {
+    @apply font-base;
+  }
+</style>
