Change style to global to be applied on every page

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -25,7 +25,7 @@ const { title, description } = Astro.props;
 	</body>
 </html>
 
-<style>
+<style is:global>
   h1 {
     @apply font-bold font-headings;
   }
