create stories page

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -20,7 +20,7 @@ const { title, description } = Astro.props;
 		<meta name='generator' content={Astro.generator} />
 		<title>{title}</title>
 	</head>
-	<body>
+	<body class="page">
 		<slot />
 	</body>
 </html>
@@ -32,5 +32,16 @@ const { title, description } = Astro.props;
 
   p {
     @apply font-base;
+  }
+
+  @media only screen and (min-width: 1024px) {
+    .page {
+      box-shadow: 0 0 30px rgba(0, 0, 0, .2);
+      max-width: calc(1280px - 32px);
+    }
+  }
+  .page {
+    margin-left: auto;
+    margin-right: auto;
   }
 </style>
