--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -8,10 +8,17 @@ import HeroSection from '@/components/HeroSection.astro';
   description='Xin chào tất cả mọi người, chúng mình đến từ câu lạc bộ công nghệ thông tin đầu tiên và duy nhất tại CSP - ADaPT! THE ONLY LIMIT IS YOUR IMAGINATION. ADaPT là câu lạc bộ công nghệ thông tin đầu tiên và duy nhất tại Chuyên Sư Phạm. Nhận thấy tầm…'
 >
   <HeroSection>
-    <h1 class="text-7xl text-zinc-50">ADaPT</h1>
-    <p class='text-2xl max-w-3xl text-zinc-200 text-center'>
+    {/** Make the text smaller on small screens */}
+    <h1 class='sm:text-7xl text-5xl text-zinc-50 pb-6'>ADaPT</h1>
+    {/** Make the text smaller on small screens */}
+    <p class='sm:text-2xl text-lg text-zinc-200 text-center max-w-2xl'>
       Xin chào tất cả mọi người, chúng mình đến từ câu lạc bộ
       công nghệ thông tin đầu tiên và duy nhất tại CSP – ADaPT!
     </p>
   </HeroSection>
+
+  <div class='hero min-h-[35vh] bg-[#FFD200]'>
+    {/** Make the text smaller on small screens */}
+    <p class='sm:text-5xl text-[2rem] p-5 max-w-xl text-center text-[#303030] !leading-normal font-bold'>THE ONLY LIMIT IS YOUR IMAGINATION</p>
+  </div>
 </Layout>
