add banner section to stories page

--- a/src/pages/stories.astro
+++ b/src/pages/stories.astro
@@ -1,6 +1,7 @@
 ---
 import Layout from '@/layouts/Layout.astro';
 import StoriesSection from '@/components/StoriesSection.astro';
+import BannerSection from '@/components/BannerSection.astro';
 ---
 
 <Layout
@@ -14,6 +15,7 @@ import StoriesSection from '@/components/StoriesSection.astro';
     <img src="logo_adapt.webp" alt="" class="img-row grow-[calc(506/506)]">
   </div>
   <StoriesSection></StoriesSection>
+  <BannerSection></BannerSection>
 </Layout>
 
 <style>
