refactoring stories page

--- a/src/components/BannerSection.astro
+++ b/src/components/BannerSection.astro
@@ -1,5 +1,12 @@
 ---
-import {banners} from "stories.json"
+const banners = [
+  "banner_1-2.webp",
+  "banner_3.png",
+  "banner_4.webp",
+  "banner_5.webp",
+  "banner_6.webp",
+  "banner_7.webp"
+];
 ---
 <div>
     {banners.map((url) => (
