--- a/src/components/BannerSection.astro
+++ b/src/components/BannerSection.astro
@@ -10,6 +10,6 @@ const banners = [
 ---
 <div>
     {banners.map((url) => (
-      <img src={url} alt={url} class="w-full max-w-[1663px] ml-auto mr-auto pt-8">
+      <img src={url} alt={url} class="w-full max-w-[1663px] ml-auto mr-auto pt-8 pl-6 pr-6">
     ))}
 </div>
