--- a/src/components/Story.astro
+++ b/src/components/Story.astro
@@ -1,16 +1,16 @@
 ---
 interface Props {
-  imageUrl: string,
+  imageURL: string,
   header: string,
   content: string,
   reversed: boolean
 }
 
-const {imageUrl, header, content, reversed} = Astro.props;
+const {imageURL, header, content, reversed} = Astro.props;
 ---
-<div class=`pt-16 flex mr-auto ml-auto w-full max-w-[1663px] flex-col md:flex-row ${reversed ? "md:flex-row-reverse" : ""}`>
-  <div class="md:w-1/2">
-    <img src={imageUrl} alt={header} class="w-full h-auto">
+<div class=`pl-6 pr-6 pt-16 flex mr-auto ml-auto w-full max-w-[1663px] flex-col md:flex-row ${reversed ? "md:flex-row-reverse" : ""}`>
+  <div class="mb-auto mt-auto md:w-1/2">
+    <img src={imageURL} alt={header} class="w-full h-auto">
   </div>
   <div class="text-center mt-auto mb-auto md:w-1/2">
     <h1 class="text-red-700 text-[40px] font-normal pt-8">{header}</h1>
