--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -3,6 +3,7 @@ import "@fontsource-variable/rubik";
 import "@fontsource-variable/nunito";
 
 import Navbar from "@/components/Navbar.astro";
+import Footer from "@/components/Footer.astro";
 
 interface Props {
 	title: string;
@@ -18,7 +19,16 @@ const { title, description } = Astro.props;
 		<meta charset="UTF-8" />
 		<meta name="description" content={description} />
 		<meta name="viewport" content="width=device-width" />
-		<link rel="icon" type="image/webp" href="/favicon.webp" />
+		<link rel="icon" type="image/webp" href="/favicon.webp" /><link
+			rel="preconnect"
+			href="https://fonts.googleapis.com"
+		/>
+		<link rel="preconnect" href="https://fonts.googleapis.com" />
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+		<link
+			href="https://fonts.googleapis.com/css2?family=Albert+Sans:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Rubik:ital,wght@0,300..900;1,300..900&display=swap"
+			rel="stylesheet"
+		/>
 		<meta name="generator" content={Astro.generator} />
 		<title>{title}</title>
 		<script
@@ -28,6 +38,7 @@ const { title, description } = Astro.props;
 	<body>
 		<Navbar />
 		<slot />
+		<Footer />
 	</body>
 </html>
 
