a little more update

--- a/src/components/Slider.astro
+++ b/src/components/Slider.astro
@@ -1,4 +1,4 @@
-<div class="firstSec">
+<div class="firstSec h-96 bg-slate-100">
     <h1 class="text-lg font-bold text-black z-10">PRODUCTS</h1>
     <div class="slide flex flex-row justify-center content-center relative w-full">
         <button class="butleft text-3xl absolute text-white self-center bg-gray-600 rounded w-10 h-20 hover:bg-white hover:text-black duration-100"
@@ -34,10 +34,9 @@
 
     .firstSec {
         overflow: hidden;
-        background-color: whitesmoke;
         display: flex;
         flex-direction: column;
-        justify-items: center;
+        justify-content: center;
         align-items: center;
         height: 50vh;
         padding-top: 2vh;
