--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,6 +1,6 @@
-<div class="footer">
-    <div class="leftFooter">
-        <span>CONTACT US</span>
+<div class="footer p-4">
+    <div class="leftFooter flex md:flex-row lg:flex-row sm:flex-col md:content-center lg:content-center sm:content-start h-fit" style="background-color: #282828;">
+        <span class="font-bold text-white sm:text-2xl lg:text-5xl">CONTACT US</span>
     </div>
     <div class="rightFooter">
         <p class="footerLink">
@@ -29,13 +29,8 @@
 
 <style>
     .footer {
-        background-color: #282828;
-        display: flex;
-        flex-direction: row;
-        align-items: center;
         padding-left: 1rem;
         padding-right: 1rem;
-        height: 15rem;
     }
 
     .footer .leftFooter {
@@ -45,12 +40,6 @@
         justify-content: start;
         width: 50%;
         height: 70%;
-    }
-
-    .footer .leftFooter span {
-        font-weight: bold;
-        color: white;
-        font-size: 3rem;
     }
 
     .footer .rightFooter {
