--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -6,8 +6,8 @@ import NavItems from "@/components/NavItems.astro";
 {/** Everything goes on the left on small screens */}
 <nav
   id="navbar"
-  class="lg:justify-center navbar bg-[#303030] py-5 text-zinc-50"
-  style="position: fixed; z-index: 1; transition: transform 0.3s ease;"
+  class="lg:justify-center navbar bg-[#303030] py-5 text-zinc-50 z-10"
+  style="position: fixed; transition: transform 0.3s ease;"
 >
   {/** Center the nav on large screens */}
   <div class="max-w-7xl w-screen justify-between">
