--- a/src/pages/products.astro
+++ b/src/pages/products.astro
@@ -8,19 +8,19 @@ import Slider from "@/components/Slider.astro";
   title="ADaPT – Assemble Drive and Perform Technology"
   description="Xin chào tất cả mọi người, chúng mình đến từ câu lạc bộ công nghệ thông tin đầu tiên và duy nhất tại CSP - ADaPT! THE ONLY LIMIT IS YOUR IMAGINATION. ADaPT là câu lạc bộ công nghệ thông tin đầu tiên và duy nhất tại Chuyên Sư Phạm. Nhận thấy tầm…"
 >
-  <div class="prod-cont">
+  <div class="prod-cont w-full">
     <!-- Top Div with Sliding Image -->
     <Slider />
 
     <!-- Item cards -->
     <div class="flex flex-col content-center justify-center bg-white">
       <h1
-        class="font-bold text-3xl text-red-600 uppercase text-center h-max m-2"
-        style="font-family: 'Roboto';"
+        class="font-bold text-3xl text-red-600 text-center h-max m-2"
+        style="font-family: Rowdies;"
       >
-        Một số sản phẩm công nghệ của ADaPT
+        MỘT SỐ SẢN PHẨM CÔNG NGHỆ CỦA ADaPT
       </h1>
-      <div class="grid grid-cols-3 justify-center content-center">
+      <div class="grid lg:grid-cols-3 md:grid-cols-2 sm:grid-cols-1 justify-center content-center">
         <Itemcard />
       </div>
     </div>
