--- a/src/components/Slider.astro
+++ b/src/components/Slider.astro
@@ -1,15 +1,62 @@
-<div class="firstSec h-96 bg-slate-100">
-    <h1 class="text-lg font-bold text-black z-10">PRODUCTS</h1>
-    <div class="slide flex flex-row justify-center content-center relative w-full">
-        <button class="butleft text-3xl absolute text-white self-center bg-gray-600 rounded w-10 h-20 hover:bg-white hover:text-black duration-100"
+---
+interface CarouselImage {
+    src: string;
+    id: string;
+}
+
+const srcList = [
+    "bot.png",
+    "circuit.jpg",
+    "sudoku.jpg",
+    "heart.png",
+    "fogg.png",
+    "pp.png",
+    "thirdprize.jpg",
+    "uless.png",
+];
+
+let imgList: CarouselImage[] = [];
+
+for (let i = 0; i < srcList.length; ++i) {
+    imgList.push({
+        src: "./productImage/" + srcList[i],
+        id: i.toString(),
+    });
+}
+---
+
+<div
+    class="firstSec h-full bg-slate-100 relative flex flex-col justify-center content-center p-10"
+>
+    <h1 class="text-lg font-bold text-black w-full text-center">
+        PRODUCTS
+    </h1>
+    <div class="slide flex flex-row justify-center content-center">
+        <button
+            class="butleft text-3xl absolute text-white self-center bg-gray-600 rounded w-10 h-20 hover:bg-white hover:text-black duration-100"
             ><i class="fa-solid fa-arrow-left"></i></button
         >
-        <img class="object-fit h-96" src="" id="imgpre" />
-        <button class="butright text-3xl absolute text-white self-center bg-gray-600 rounded w-10 h-20 hover:bg-white hover:text-black duration-100"
+        <div
+            class="carousel carousel-center rounded lg:h-96 overflow-hidden"
+            id="carousel"
+        >
+            {
+                imgList.map((imgInfo) => (
+                    <div class="carousel-item content-center justify-center w-full h-auto">
+                        <img
+                            class="lg:h-96 h-auto"
+                            src={imgInfo.src}
+                            id={"img-" + imgInfo.id}
+                        />
+                    </div>
+                ))
+            }
+        </div>
+        <button
+            class="butright text-3xl absolute text-white self-center bg-gray-600 rounded w-10 h-20 hover:bg-white hover:text-black duration-100"
             ><i class="fa-solid fa-arrow-right"></i></button
         >
     </div>
-    <div id="poscont" class="flex flex-row justify-center content-center h-4 w-fit z-10 mt-4"></div>
 </div>
 
 <style>
@@ -20,19 +67,7 @@
     .slide > .butright {
         right: 10px;
     }
-    
-    .poscont {
-        display: flex;
-        flex-direction: row;
-        justify-content: center;
-        align-items: center;
-        width: fit-content;
-        height: 10px;
-        margin-top: 10px;
-        z-index: 1;
-    }
-
-    .firstSec {
+    x .firstSec {
         overflow: hidden;
         display: flex;
         flex-direction: column;
@@ -55,58 +90,30 @@
 </style>
 
 <script>
-    const img = document.getElementById("imgpre");
-    const srcList = [
-        "bot.png",
-        "circuit.jpg",
-        "sudoku.jpg",
-        "heart.png",
-        "fogg.png",
-        "pp.png",
-        "thirdprize.jpg",
-        "uless.png",
-    ];
+    location.hash = "";
+
     let curImg = 0;
-    img.src = "/productImage/" + srcList[curImg];
+    const imgNum = 8;
 
-    for (let i = 0; i < srcList.length; ++i) {
-        const pos = document.getElementById("poscont");
-        const addpos = document.createElement("div");
-        addpos.id = `pos-${i}`;
-        addpos.style.borderColor = "black";
-        addpos.style.borderWidth = "2px";
-        addpos.style.borderRadius = "50%";
-        addpos.style.width = "10px";
-        addpos.style.height = "10px";
-        addpos.style.margin = "2px";
-        pos?.appendChild(addpos);
-    }
-
-    document.getElementById(`pos-${curImg}`).style.backgroundColor = "black";
-
-    let inv = setInterval(() => {
-        swit(1);
-    }, 5000);
+    // let inv = setInterval(() => {
+    //     swit(1);
+    // }, 5000);
 
     document.querySelector(".butleft").onclick = prev;
     document.querySelector(".butright").onclick = next;
 
     function prev() {
         swit(-1);
-        clearInterval(inv);
+        // clearInterval(inv);
     }
 
     function next() {
         swit(1);
-        clearInterval(inv);
+        // clearInterval(inv);
     }
 
-    function swit(amt) {
-        document.getElementById(`pos-${curImg}`).style.backgroundColor =
-            "transparent";
-        curImg = (curImg + srcList.length + amt) % srcList.length;
-        document.getElementById(`pos-${curImg}`).style.backgroundColor =
-            "black";
-        img.src = "/productImage/" + srcList[curImg];
+    function swit(amt: number) {
+        curImg = (curImg + imgNum + amt) % imgNum;
+        location.hash = `#img-${curImg}`;
     }
 </script>
