--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,6 +1,8 @@
 ---
 import "@fontsource-variable/rubik";
 import "@fontsource-variable/nunito";
+import "@fontsource/roboto"
+import "@fontsource/rowdies"
 
 import Navbar from "@/components/Navbar.astro";
 import Footer from "@/components/Footer.astro";
@@ -23,19 +25,13 @@ const { title, description } = Astro.props;
 			rel="preconnect"
 			href="https://fonts.googleapis.com"
 		/>
-		<link rel="preconnect" href="https://fonts.googleapis.com" />
-		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-		<link
-			href="https://fonts.googleapis.com/css2?family=Albert+Sans:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Rubik:ital,wght@0,300..900;1,300..900&display=swap"
-			rel="stylesheet"
-		/>
 		<meta name="generator" content={Astro.generator} />
 		<title>{title}</title>
 		<script
 			src="https://kit.fontawesome.com/yourcode.js"
 			crossorigin="anonymous"></script>
 	</head>
-	<body>
+	<body class="scroll-smooth">
 		<Navbar />
 		<slot />
 		<Footer />
