Add sections but I'm out of ideas

--- a/src/components/HeroSection.astro
+++ b/src/components/HeroSection.astro
@@ -1,7 +1,7 @@
 <div class='hero'>
   <div class='z-1 bg-[url(/bg/hero.webp)] bg-cover bg-center bg-fixed absolute'></div>
   <div class='z-2 bg-black bg-opacity-60 absolute'></div>
-  <div class='hero-content text-center'>
+  <div class='hero-content text-center p-0'>
     <main>
       <slot />
     </main>
