--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,6 +1,11 @@
 ---
+import { Image } from 'astro:assets';
+import adaptLogo from '@/assets/images/adapt-logo.webp';
+
 import Layout from '@/layouts/Layout.astro';
+
 import HeroSection from '@/components/HeroSection.astro';
+import Section from '@/components/Section.astro';
 ---
 
 <Layout
@@ -21,4 +26,32 @@ import HeroSection from '@/components/HeroSection.astro';
     {/** Make the text smaller on small screens */}
     <p class='sm:text-5xl text-[2rem] p-5 max-w-xl text-center text-[#303030] !leading-normal font-bold'>THE ONLY LIMIT IS YOUR IMAGINATION</p>
   </div>
+
+  <Section>
+    <p class='title'>ADaPT</p>
+    <p class='content'>
+      ADaPT là câu lạc bộ công nghệ đầu tiên và duy nhất tại trường THPT Chuyên Sư Phạm. Được bảo trợ bởi thầy Đào Xuân Dương, tháng 3 năm 2016,
+      câu lạc bộ đã ra đời với thế hệ đầu tiên đầy nhiệt huyết. Xuyên suốt 8 năm hoạt động, ADaPT đã tạo ra nhiều sản phẩm sáng tạo độc đáo và thành công trong nhiều cuộc thi công nghệ.
+    </p>
+  </Section>
+
+  <Section>
+    <p class='title'>ADaPT’s Events</p>
+    <p class='content'>
+      Nhắc tới ADaPT, không thể không kể tới những hoạt động thú vị xung quanh những
+      ứng dụng của công nghệ. Một số sự kiện thường niên của ADaPT như: sự kiện chào
+      mừng học sinh khối 10 aPresent, giải đấu aSpeak, hội chợ công nghệ aFair và giải
+      đấu aRobocon.
+    </p>
+  </Section>
+
+  <Section>
+    <p class='title'>ADaPT’s Products</p>
+    <p class='content'>
+      Trong 8 năm hoạt động, câu lạc bộ đã cho ra mắt rất nhiều sản phẩm công nghệ
+      sáng tạo. Một số sản phẩm có thể kể đến như: giàn phun sương khử khuẩn, ứng dụng
+      trò chuyện ẩn danh HeartSync, cánh tay robot aDino,, thùng rác thông
+      minh aTrade,… Hãy cùng chờ đợi thêm những sản phẩm sắp ra mắt của ADaPT nhé!
+    </p>
+  </Section>
 </Layout>
