--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,5 +1,5 @@
 <div class="footer p-4">
-    <div class="leftFooter flex md:flex-row lg:flex-row sm:flex-col md:content-center lg:content-center sm:content-start h-fit" style="background-color: #282828;">
+    <div class="leftFooter flex md:flex-row lg:flex-row sm:flex-col md:content-center lg:content-center sm:content-start h-fit">
         <span class="font-bold text-white sm:text-2xl lg:text-5xl">CONTACT US</span>
     </div>
     <div class="rightFooter">
