--- a/src/components/Itemcard.astro
+++ b/src/components/Itemcard.astro
@@ -107,7 +107,7 @@ const cardList: cardInfo[] = [
 {
     cardList.map((car) => (
         <div
-            class="duration-300 min-w-64 p-4 hover:bg-white bg-gray-900 group"
+            class="duration-300 min-w-64 p-4 hover:bg-white group"
             style="font-family: Roboto;"
         >
             <img
