--- a/src/pages/products.astro
+++ b/src/pages/products.astro
@@ -13,7 +13,7 @@ import Slider from "@/components/Slider.astro";
     <Slider />
 
     <!-- Item cards -->
-    <div class="flex flex-col content-center justify-center bg-gray-900">
+    <div class="flex flex-col content-center justify-center" style="background-color: #1d232a;">
       <h1
         class="font-bold text-3xl text-red-600 text-center h-max m-2"
         style="font-family: Rowdies;"
