--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,7 +1,4 @@
 ---
-import { Image } from 'astro:assets';
-import adaptLogo from '@/assets/images/adapt-logo.webp';
-
 import Layout from '@/layouts/Layout.astro';
 
 import HeroSection from '@/components/HeroSection.astro';
@@ -50,7 +47,7 @@ import Section from '@/components/Section.astro';
     <p class='content'>
       Trong 8 năm hoạt động, câu lạc bộ đã cho ra mắt rất nhiều sản phẩm công nghệ
       sáng tạo. Một số sản phẩm có thể kể đến như: giàn phun sương khử khuẩn, ứng dụng
-      trò chuyện ẩn danh HeartSync, cánh tay robot aDino,, thùng rác thông
+      trò chuyện ẩn danh HeartSync, cánh tay robot aDino, thùng rác thông
       minh aTrade,… Hãy cùng chờ đợi thêm những sản phẩm sắp ra mắt của ADaPT nhé!
     </p>
   </Section>
