--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -1,5 +1,4 @@
 ---
-import MenuIcon from '@/components/MenuIcon.astro';
 import NavItems from '@/components/NavItems.astro';
 ---
 
@@ -19,7 +18,20 @@ import NavItems from '@/components/NavItems.astro';
     {/** Small screen icon */}
     <div class='lg:hidden dropdown dropdown-end'>
       <div tabindex='0' role='button' class='btn btn-ghost'>
-        <MenuIcon />
+        <svg
+          xmlns='http://www.w3.org/2000/svg'
+          class='h-5 w-5'
+          fill='none'
+          viewBox='0 0 24 24'
+          stroke='currentColor'
+        >
+          <path
+            stroke-linecap='round'
+            stroke-linejoin='round'
+            stroke-width='2'
+            d='M4 6h16M4 12h8m-8 6h16'
+          />
+        </svg>
       </div>
 
       <ul
