Just text center lol wtf did I do

--- a/src/components/NavItems.astro
+++ b/src/components/NavItems.astro
@@ -7,7 +7,7 @@ interface LinkOptions {
 type Link = LinkOptions | string;
 
 // Link list
-const links: Link[] = ['Home', 'Stories', 'News', 'Events', 'Products', 'Contact'];
+const links: Link[] = ['Home', 'Stories', 'News', 'Resources', 'Products', 'Contact'];
 
 // Normalized options
 const normalizedOptions: LinkOptions[] = links.map(
