--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,7 +2,7 @@
 import Layout from '@/layouts/Layout.astro';
 
 import HeroSection from '@/components/HeroSection.astro';
-import Section from '@/components/Section.astro';
+import ContentSection from '@/components/ContentSection.astro';
 ---
 
 <Layout
@@ -24,15 +24,15 @@ import Section from '@/components/Section.astro';
     <p class='sm:text-5xl text-[2rem] p-5 max-w-xl text-center text-[#303030] !leading-normal font-bold'>THE ONLY LIMIT IS YOUR IMAGINATION</p>
   </div>
 
-  <Section>
+  <ContentSection>
     <p class='title'>ADaPT</p>
     <p class='content'>
       ADaPT là câu lạc bộ công nghệ đầu tiên và duy nhất tại trường THPT Chuyên Sư Phạm. Được bảo trợ bởi thầy Đào Xuân Dương, tháng 3 năm 2016,
       câu lạc bộ đã ra đời với thế hệ đầu tiên đầy nhiệt huyết. Xuyên suốt 8 năm hoạt động, ADaPT đã tạo ra nhiều sản phẩm sáng tạo độc đáo và thành công trong nhiều cuộc thi công nghệ.
     </p>
-  </Section>
+  </ContentSection>
 
-  <Section>
+  <ContentSection>
     <p class='title'>ADaPT’s Events</p>
     <p class='content'>
       Nhắc tới ADaPT, không thể không kể tới những hoạt động thú vị xung quanh những
@@ -40,9 +40,9 @@ import Section from '@/components/Section.astro';
       mừng học sinh khối 10 aPresent, giải đấu aSpeak, hội chợ công nghệ aFair và giải
       đấu aRobocon.
     </p>
-  </Section>
+  </ContentSection>
 
-  <Section>
+  <ContentSection>
     <p class='title'>ADaPT’s Products</p>
     <p class='content'>
       Trong 8 năm hoạt động, câu lạc bộ đã cho ra mắt rất nhiều sản phẩm công nghệ
@@ -50,5 +50,5 @@ import Section from '@/components/Section.astro';
       trò chuyện ẩn danh HeartSync, cánh tay robot aDino, thùng rác thông
       minh aTrade,… Hãy cùng chờ đợi thêm những sản phẩm sắp ra mắt của ADaPT nhé!
     </p>
-  </Section>
+  </ContentSection>
 </Layout>
