add footer + minor fixing

--- a/src/components/ContentSection.astro
+++ b/src/components/ContentSection.astro
@@ -1,4 +1,4 @@
-<div class='section w-screen min-h-[60vh] flex flex-col justify-center items-center bg-[#303030] [&:nth-child(odd)]:bg-[#242424] p-10 text-center'>
+<div class='section w-full min-h-[60vh] flex flex-col justify-center items-center bg-[#303030] [&:nth-child(odd)]:bg-[#242424] p-10 text-center'>
   <slot />
 </div>
 
