--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -3,6 +3,7 @@ import '@fontsource-variable/rubik';
 import '@fontsource-variable/nunito';
 
 import Navbar from '@/components/Navbar.astro';
+import Footer from '@/components/Footer.astro';
 
 interface Props {
 	title: string;
@@ -25,6 +26,7 @@ const { title, description } = Astro.props;
 	<body>
 	  <Navbar />
 		<slot />
+	  <Footer />
 	</body>
 </html>
 
