--- a/src/components/StoryList.astro
+++ b/src/components/StoryList.astro
@@ -76,7 +76,7 @@ const stories: ({
 {stories.map((story) => <>
   <div class='pl-6 pr-6 pt-16 flex mr-auto ml-auto w-full max-w-[1663px] flex-col md:flex-row [&:nth-child(odd)]:md:flex-row-reverse'>
     <div class='mb-auto mt-auto md:w-1/2'>
-      <Image src={story.image} alt={story.header} class="w-full h-auto" />
+      <Image src={story.image} alt={story.header} class="w-full h-auto rounded-3xl" />
     </div>
 
     <div class="text-center mt-auto mb-auto md:w-1/2 p-10">
